@startuml

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "Entity" as e {
  *_id : number <<generated>>
  --
  *label : text
  *category: {'persoon', 'commissie', 'instelling', 'hoedanigheid'}
  ' hints are years in general
  activity_hint_begin: text 
  activity_hint_end: text
}

entity "record" as r {
  *_id : number <<generated>>
  --
  * id
}

entity "database" as db{
  *_id : number <<generated>>
  --
  * name: text
  ' waar leeft de database, etc
 }

entity "link" as l {
  *_id : number <<generated>>
  --
  href: anyURI
}



e ||-|{ r
r }|..|| db
r }|..o{ l

@enduml

